# cpp_redis

./: .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  sources.cmake
.github/: dependabot.yml
.github/workflows/: format.yml
scripts/: install-cmake.sh  install-osx-dependencies.sh  prepare.sh  start-redis.sh
sources/core/: client.cpp
tests/: CMakeLists.txt
